# ozone-rust

./: .gitignore  Cargo.toml  GAPS.md  README.md
acceptance/: README.md  rust_s3_smoke.robot
crates/isa-l-safe/: Cargo.toml
crates/isa-l-safe/src/: lib.rs
crates/isa-l-safe/tests/: golden_vectors.rs
crates/isa-l-sys/: Cargo.toml  build.rs
crates/isa-l-sys/src/: lib.rs
crates/ozone-config/: Cargo.toml
crates/ozone-config/src/: lib.rs
crates/ozone-dn/: Cargo.toml
crates/ozone-dn-client/: Cargo.toml
crates/ozone-dn-client/src/: lib.rs
crates/ozone-dn-client/tests/: e2e.rs
crates/ozone-dn-server/: Cargo.toml
crates/ozone-dn-server/src/: lib.rs  repair.rs  scm.rs  scm_compliant.rs  scrub.rs
crates/ozone-dn-server/tests/: compliant_scm_loop.rs  durability.rs  ec_repair.rs  scm_loop.rs
crates/ozone-dn/src/: lib.rs  main.rs
crates/ozone-ec/: Cargo.toml
crates/ozone-ec/src/: lib.rs  stripe.rs
crates/ozone-ec/tests/: repair_identity.rs
crates/ozone-fjall-store/: Cargo.toml
crates/ozone-fjall-store/src/: lib.rs
crates/ozone-grpc-types/: Cargo.toml  build.rs
crates/ozone-grpc-types/src/: conv.rs  lib.rs
crates/ozone-grpc-types/tests/: real_om_proto.rs  real_scm_proto.rs
crates/ozone-observability/: Cargo.toml
crates/ozone-observability/src/: lib.rs
crates/ozone-om-client/: Cargo.toml
crates/ozone-om-client/examples/: probe_real_om.rs
crates/ozone-om-client/src/: compliant.rs  lib.rs
crates/ozone-s3-gw/: Cargo.toml
crates/ozone-s3-gw/examples/: rust_stack.rs
crates/ozone-s3-gw/src/: backend.rs  lib.rs  main.rs
crates/ozone-s3-gw/tests/: compliant_om_e2e.rs  s3_e2e.rs
crates/ozone-scm-client/: Cargo.toml
crates/ozone-scm-client/src/: compliant.rs  lib.rs
crates/ozone-storage/: Cargo.toml
crates/ozone-storage/src/: checksum.rs  chunk_store.rs  error.rs  lib.rs  meta.rs
crates/ozone-types/: Cargo.toml
crates/ozone-types/src/: chunk.rs  container.rs  lib.rs
crates/test-fixtures/: Cargo.toml
crates/test-fixtures/src/: compliant_om.rs  compliant_scm.rs  fake_om.rs  fake_scm.rs  lib.rs
docs/flows/: ec-reconstruction.md  om-gateway-protocol.md  scm-grpc-datanode-adapter.md  scm-register-heartbeat.md
ec-equivalence/: README.md
finished-work/: README.md
pending-work/: README.md  resume-real-cluster.md
pending-work/chat-log/: README.md
pending-work/ozone-cluster/: ozone-site.xml  start-extra-datanodes.sh
proto/: datanode_gateway_v1.proto  om_rust_gateway_v1.proto  scm_rust_datanode_v1.proto
