[package]
name = "ozone-dn-server"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "DatanodeGatewayService server: container/block/chunk handlers over the storage traits"

[dependencies]
ozone-types = { path = "../ozone-types" }
ozone-storage = { path = "../ozone-storage" }
ozone-grpc-types = { path = "../ozone-grpc-types" }
ozone-scm-client = { path = "../ozone-scm-client" }
# EC repair reads surviving shards from peer datanodes (client) and reconstructs
# them (ozone-ec). ozone-dn-client depends on ozone-dn-server only as a
# dev-dependency, so this normal dep forms no cycle.
ozone-dn-client = { path = "../ozone-dn-client" }
ozone-ec = { path = "../ozone-ec" }
tonic = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
futures = { workspace = true }
bytes = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
ozone-fjall-store = { path = "../ozone-fjall-store" }
test-fixtures = { path = "../test-fixtures" }
