[package]
name = "ozone-ec"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "Ozone-specific Reed-Solomon Cauchy EC layer"

[dependencies]
isa-l-safe = { path = "../isa-l-safe" }
thiserror.workspace = true

[dev-dependencies]
proptest = { workspace = true }
