[package]
name = "ozone-grpc-types"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "tonic-build generated gRPC types for our three protos"

# All code here is tonic/prost-generated. Disable doctests: vendored proto leading
# comments (e.g. the real Ozone SCM service's ASCII state-diagram) become indented
# Markdown code blocks that rustdoc otherwise tries to compile as Rust doctests.
[lib]
doctest = false

[dependencies]
tonic.workspace = true
prost.workspace = true
prost-types.workspace = true
ozone-types = { path = "../ozone-types" }
thiserror = { workspace = true }

[build-dependencies]
tonic-build.workspace = true
