[package]
name = "ozone-om-client"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "gRPC client for OmRustGatewayService"

[dependencies]
tonic = { workspace = true }
ozone-grpc-types = { path = "../ozone-grpc-types" }
thiserror = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
