[package]
name = "ozone-om-client"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "gRPC client for the Apache Ozone Manager"

[dependencies]
tonic = { workspace = true }
ozone-grpc-types = { path = "../ozone-grpc-types" }
ozone-types = { path = "../ozone-types" }
thiserror = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
tokio-stream = { workspace = true }
parking_lot = { workspace = true }
test-fixtures = { path = "../test-fixtures" }
md-5 = { workspace = true }
