[package]
name = "ozone-scm-client"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "gRPC client for ScmRustDatanodeService"

[dependencies]
tonic = { workspace = true }
futures = { workspace = true }
thiserror = { workspace = true }
ozone-grpc-types = { path = "../ozone-grpc-types" }

[dev-dependencies]
tokio = { workspace = true }
tokio-stream = { workspace = true }
test-fixtures = { path = "../test-fixtures" }
