[package]
name = "ozone-storage"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "Datanode storage contracts: chunk file store, CRC32C checksums, MetaStore trait"

[dependencies]
ozone-types = { path = "../ozone-types" }
tokio = { workspace = true }
async-trait = { workspace = true }
bytes = { workspace = true }
crc32c = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
