[package]
name = "test-fixtures"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "Shared test fixtures: in-memory compliant OM + compliant SCM servers"

[dependencies]
ozone-grpc-types = { path = "../ozone-grpc-types" }
tonic = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
parking_lot = { workspace = true }
md-5 = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
